...
            app:layout_collapseMode="pin"/>


    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/update_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/update_button_cd"
        android:elevation="8dp"
        android:src="@drawable/ic_add_white"
...
