...
                    android:textSize="18sp"
                    tools:text="Max 32"/>

            </LinearLayout>

            <TextView
                android:id="@+id/weather_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/temp_range_container"
                android:layout_centerHorizontal="true"
                android:textColor="@color/material_white"
                android:textSize="18sp"
...
